--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,36 @@
+@import '~antd/dist/antd.css';
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
-.page {
+.app {
+    width: 100vw;
     min-height: 100vh;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.app main {
+    flex: 0 0 auto;
+}
+.height {
+    min-height: 100vh;
+}
+.column {
+    flex-direction: column;
+}
+.calculator {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 100px;
+    /*height: clamp(300px, 60vh, 700px);*/
+    /*width: clamp(310px, 85vw, 600px);*/
+}
+.calc__item {
+    border: 1px solid #000;
+    padding: 10px;
+    font-size: 50px;
 }
